--- a/lab3/requirements.txt
+++ b/lab3/requirements.txt
@@ -144,7 +144,7 @@ pycryptodome==3.19.0
 pydantic==1.10.2
 pygame==2.5.0
 Pygments==2.16.1
-PyJWT==2.8.0
+#PyJWT==2.8.0
 pymdown-extensions==10.3
 pymongo==4.2.0
 pyparsing==3.0.9
